--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Abdulla Almazrouei</title>
   <meta name="description" content="Your personal portfolio">
 
-  <link href="./css/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
