--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Abdulla Almazrouei</title>
   <meta name="description" content="Your personal portfolio">
 
-  <link href="stylee.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
