--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
   <title>Abdulla Almazrouei</title>
   <meta name="description" content="Your personal portfolio">
 
-  <link href="style.css" rel="stylesheet">
+  <link href="stylee.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -53,4 +54,3 @@
   </div>
 </body>
 </html>
-
